--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">voluntariar</string>
+    <string name="welcome">Welcome</string>
+    <string name="your_name">What \'s your name?</string>
+    <string name="next">Next</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
